@@ -191,12 +191,16 @@ if (locale == "enGB" or locale == "enUS") then
 	L["I need a ride."]															= "I need a ride."
 	L["D'kaan is coming with help."]											= "D'kaan is coming with help."
 	L["Your presence is requested immediately at Provis Terra."]				= "Your presence is requested immediately at Provis Terra."
+	L["I'll fight the harpies that come."]										= "I'll fight the harpies that come."
+	L["I'm in."]																= "I'm in."
+	L["Got it."]																= "Got it."
 	L["Daelya Twilightsbane 1"]													= "What does the Light wish of me?"
 	L["Daelya Twilightsbane 2"]													= "I will do my best to serve the Light. I swear to it."
-	L["Herbert Gloomburst 1"]													= "I'll fight the harpies that come."
-	L["Herbert Gloomburst 2"]													= "Herbert, do you have an ice mote I can use?"
-	L["Warlord Breka Grimaxe 1"]												= "Let's get out of the citadel and figure out how to get back home."
-	L["Warlord Breka Grimaxe 2"]												= "I know my way around Orgrimmar."
+	L["Meredy Huntswell 1"]														= "I'm ready, transform me into an ogre and I'll sneak into their citadel."
+	L["Herbert Gloomburst 1"]													= "Herbert, do you have an ice mote I can use?"
+	L["Let's get out of the citadel and figure out how to get back home."]		= "Let's get out of the citadel and figure out how to get back home."
+	L["Warlord Breka Grimaxe 1"]												= "I know my way around Orgrimmar."
+	L["Lindie Springstock 1"]													= "Let's head to the Old Town stables."
 	L["Archmage Khadgar 1"]														= "FOR AZEROTH!"
 	L["Archmage Khadgar 2"]														= "You are about to embark on a dangerous mission, and you may not be able to return immediately."
 	L["Johnny Awesome 1"] 														= "Well, we are having some problems at the Sludge Fields, located northeast of here. Warden Stillwater could use your help."
